--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,18 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-image: url(../images/cover-image-dark.png);
+  --background-color: #000028;
+  --color-title: #DB00FF;
+  --accent-color: #FF0070;
+  --color-title-paragraph: #000028;
+  --color-hover: rgba(255, 0, 112, 0.4);
+  --color-text-paragraph: #F1B2CE;
+  --title-section-color: #FF0070;
+  --accent-color-decor: #FF0070;
+  --accent-color-button: #FF0070;
+}
+
+.theme-dark .decor {
+  display: flex;
 }
