--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,38 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-image: url(../images/cover-image-light.png);
+  --background-color: #FFC2E6;
+  --color-title: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --color-title-paragraph: #353430;
+  --color-hover: rgba(53, 52, 48, 0.4);
+  --color-text-paragraph: #353430;
+  --title-section-color: #353430;
+  --accent-color-decor: #353430;
+  --accent-color-button: #353430;
 }
+
+.theme-light .decor {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --background-image: url(../images/cover-image-light.png);
+    --background-color: #FFC2E6;
+    --color-title: #FFC2E6;
+    --accent-color: #FF8DCB;
+    --color-title-paragraph: #353430;
+    --color-hover: rgba(53, 52, 48, 0.4);
+    --color-text-paragraph: #353430;
+    --title-section-color: #353430;
+    --accent-color-decor: #353430;
+    --accent-color-button: #353430;
+  }
+
+  .decor {
+    display: none;
+  }
+}
+
