--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,434 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-image: var(--background-image);
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: var(--background-color);
+  font-family: var(--font-famil, sans-serif);
+  font-size: 18px;
+  font-weight: normal;
+  padding: 0 var(--padding-page);
+}
+
+/* ====================== Шапка ====================== */
+
+.header {
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  position: relative;
+  block-size: 100vh;
+  min-block-size: 668px;
+  margin-block-end: 40px;
+}
+
+.decorated-zone::before {
+  content: '';
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  top: var(--padding-page);
+  right: 0;
+  border-inline-end: 1px solid var(--accent-color-decor);
+  border-block-start: 1px solid var(--accent-color-decor);
+}
+
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  bottom: var(--padding-page);
+  left: 0;
+  border-inline-start: 1px solid var(--accent-color-decor);
+  border-block-end: 1px solid var(--accent-color-decor);
+}
+
+.decor {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  position: absolute;
+  top: var(--padding-page);
+  right: 9px;
+  font-family: inherit;
+  font-weight: normal;
+  font-size: 18px;
+  color: var(--accent-color);
+  text-transform: uppercase;
+}
+
+.decor::after {
+  content: '';
+  align-self: center;
+  inline-size: 9px;
+  block-size: 9px;
+  border-radius: 50%;
+  background-color: var(--accent-color);
+  box-shadow: 0 0 4px 2px var(--accent-color);
+}
+
+.header__theme-menu {
+  justify-self: flex-end;
+  align-self: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-block-start: 9px;
+}
+
+.header__theme-menu-button {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 70px;
+  height: 26px;
+  border: 1px solid transparent;
+  background: transparent;
+  text-transform: lowercase;
+  color: var(--accent-color-button);
+  line-height: 100%;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--color-hover);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--accent-color-button);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-color-button);
+  pointer-events: none;
+}
+
+.title {
+  padding-block-start: 1.5px;
+  font-family: inherit;
+  font-weight: bold;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  color: var(--color-title);
+  line-height: 0.825em;
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 18px;
+  color: var(--color-title-paragraph);
+}
+
+.header__paragraph {
+  margin-block-start: 1.5px;
+  justify-self: flex-end;
+  align-self: center;
+  block-size: min-content;
+  inline-size: 100%;
+  margin-block-end: 13.5px;
+}
+
+/* ====================== Секции с текстом ====================== */
+
+.section__vertical {
+  margin-block-end: 26px;
+}
+
+.section__horizontal {
+  margin-block-start: 30px;
+  margin-block-end: 28px;
+}
+
+.title__section {
+  margin-block-end: 20px;
+  color: var(--title-section-color);
+  font-size: 18px;
+  font-family: inherit;
+}
+
+.card {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+}
+
+.card__paragraph {
+  line-height: 23.4px;
+  color: var(--color-text-paragraph);
+  margin-block-end: 20px;
+}
+
+.link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+  color: var(--color-text-paragraph);
+  cursor: pointer;
+}
+
+.link:hover {
+  border-block-end: 1px solid var(--color-text-paragraph);
+}
+
+.link:focus {
+  outline: none;
+}
+
+.link:focus-visible {
+  border: 1px solid var(--color-text-paragraph);
+}
+
+.list-title-decor {
+  background-color: var(--accent-color);
+  font-family: inherit;
+  font-weight: normal;
+  font-size: 18px;
+  color: var(--color-title-paragraph);
+}
+
+.list {
+  margin-block-start: 10px;
+  margin-block-end: 2px;
+}
+
+.list__item {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+}
+
+/* ====================== Галерея ====================== */
+
+.gallery {
+  display: flex;
+  flex-direction: column;
+  gap: 10.5px;
+}
+
+.gallery__item {
+  min-inline-size: 100%;
+  margin: 0;
+}
+
+.gallery__image {
+  display: block;
+  inline-size: 100%;
+  block-size: 100%;
+  max-inline-size: 100%;
+  object-fit: contain;
+}
+
+/* ====================== Футер ====================== */
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-block-start: 40px;
+  block-size: 100vh;
+  min-block-size: 668px;
+  position: relative;
+}
+
+.footer .title {
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+/* ====================== Медиа запросы ====================== */
+
+@media (min-width: 768px) {
+
+  .header {
+    margin-block-end: 60px;
+  }
+
+  .title {
+    margin-inline-start: -20px;
+    margin-block-start: 2px;
+  }
+
+  .header__paragraph {
+    inline-size: 50%;
+    margin-block-end: 20px;
+  }
+
+  .header__theme-menu-list {
+    margin-block-start: 20px;
+  }
+
+  .section__vertical {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-auto-rows: auto;
+    gap: 20px;
+    margin-block-end: 76px;
+  }
+
+  .card {
+    grid-column: 2 / auto;
+  }
+
+  .card__paragraph {
+    margin-block-end: 0;
+  }
+
+  .section__horizontal {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-auto-rows: auto;
+    gap: 20px;
+    margin-block-start: 79px;
+    margin-block-end: 80px;
+  }
+
+  .section__horizontal .card {
+    grid-column: span 2;
+  }
+
+  .section__horizontal .title__section {
+    margin-block-end: 0;
+  }
+
+  .list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, min-content);
+    gap: 20px;
+    box-sizing: border-box;
+    grid-auto-flow: dense;
+  }
+
+  .gallery .title-decor {
+    margin-block-end: 0;
+  }
+
+  .gallery__image {
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .title-decor:nth-child(1) {
+    grid-column: 1 / -1;
+  }
+
+  .gallery__item:nth-child(2) {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .gallery__item:nth-child(3) {
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+  }
+
+  .gallery__item:nth-child(4) {
+    grid-column: 1 / 2;
+    grid-row: 3 / 5;
+  }
+
+  .gallery__item:nth-child(5) {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+
+  .gallery__item:nth-child(6) {
+    grid-column: 2 / 4;
+    grid-row: 4 / 5;
+  }
+
+  .footer {
+    margin-block-start: 60px;
+  }
+
+  .footer .title {
+    margin-inline-start: 0;
+  }
+}
+
+/* ====================== Медиа запрос (ширина экрана 1024px) ====================== */
+
+@media (min-width: 1024px) {
+  .title {
+    font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
+    margin-block-start: -1px;
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .header__paragraph {
+    margin-block-start: -1px;
+    margin-inline-end: -0.5px;
+  }
+
+  .section__vertical {
+    gap: 10px;
+    margin-block-end: 0;
+  }
+
+  .card__paragraph {
+    margin-block-end: 10px;
+  }
+
+  .section__horizontal{
+    grid-template-columns: repeat(3, 1fr);
+    margin-block-start: 70px;
+    margin-block-end: 70px;
+  }
+
+  .section__horizontal .card:nth-child(2) {
+    align-content: start;
+    grid-column: 1;
+    grid-row: 2;
+  }
+  
+  .section__horizontal .card:nth-child(3) {
+    align-content: start;
+    grid-column: 2;
+    grid-row: 2;
+  }
+  
+  .section__horizontal .card:nth-child(4) {
+    align-content: start;
+    grid-column: 3;
+    grid-row: 2;
+  }
+
+  .list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .list {
+    margin-block-start: 9px;
+  }
+
+  .gallery {
+    margin-block-start: 67px;
+  }
 }
