--- a/styles/light.css
+++ b/styles/light.css
@@ -10,7 +10,7 @@
     чем стили в медиазапросе предпочтений пользователя
   */
   --background-image: url(../images/cover-image-light.png);
-  --background-color: #FFC2E6;
+  --background-color: #FFF1F7;
   --color-title: #FFC2E6;
   --accent-color: #FF8DCB;
   --color-title-paragraph: #353430;
