--- a/styles/style.css
+++ b/styles/style.css
@@ -87,8 +87,8 @@
   display: flex;
   justify-content: center;
   align-content: center;
-  width: 70px;
-  height: 26px;
+  inline-size: 70px;
+  block-size: 26px;
   border: 1px solid transparent;
   background: transparent;
   text-transform: lowercase;
@@ -143,13 +143,9 @@
 
 /* ====================== Секции с текстом ====================== */
 
-.section__vertical {
-  margin-block-end: 26px;
-}
-
+.section__vertical,
 .section__horizontal {
-  margin-block-start: 30px;
-  margin-block-end: 28px;
+  margin-block-end: 29px;
 }
 
 .title__section {
@@ -199,8 +195,7 @@
 }
 
 .list {
-  margin-block-start: 10px;
-  margin-block-end: 2px;
+  margin-block-start: 9px;
 }
 
 .list__item {
@@ -214,7 +209,7 @@
 .gallery {
   display: flex;
   flex-direction: column;
-  gap: 10.5px;
+  gap: 10px;
 }
 
 .gallery__item {
@@ -261,7 +256,7 @@
 
   .header__paragraph {
     inline-size: 50%;
-    margin-block-end: 20px;
+    margin-block-end: 23px;
   }
 
   .header__theme-menu-list {
@@ -314,6 +309,7 @@
     gap: 20px;
     box-sizing: border-box;
     grid-auto-flow: dense;
+    padding-block-start: 3px;
   }
 
   .gallery .title-decor {
@@ -381,11 +377,6 @@
     flex-direction: row;
   }
 
-  .header__paragraph {
-    margin-block-start: -1px;
-    margin-inline-end: -0.5px;
-  }
-
   .section__vertical {
     gap: 10px;
     margin-block-end: 0;
@@ -395,7 +386,7 @@
     margin-block-end: 10px;
   }
 
-  .section__horizontal{
+  .section__horizontal {
     grid-template-columns: repeat(3, 1fr);
     margin-block-start: 70px;
     margin-block-end: 70px;
@@ -423,13 +414,10 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-  }
-  
-  .list {
     margin-block-start: 9px;
   }
 
   .gallery {
-    margin-block-start: 67px;
+    padding-block-start: 69px;
   }
 }
